--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .main {
-    background: url('../images/truck.jpeg');
+    background: url('../images/bg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -88,11 +88,19 @@ label{
     padding-bottom: 0.5em;
     padding-top: 0.8em;
 }*/
-input.form-control, select.form-control {
+input.form-control, select.form-control, .select2-container .select2-selection--single {
     border-color: #021B79;
     height: 48px;
 }
+.select2-container--default .select2-selection--single .select2-selection__arrow,
+.select2-container--default .select2-selection--single .select2-selection__clear,
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    height: 48px;
+}
 
+.select2-container--default .select2-selection--single .select2-selection__rendered{
+    line-height: 48px;
+}
 .form-control:focus {
     box-shadow: none;
 }
