--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@
     margin-right: 2em;
     font-size: 1.2em;
 }
-.fixed-top .nav-link{
+.navbar-dark.fixed-top .nav-link{
     color: #ffffee;
 }
 .main {
@@ -113,6 +113,16 @@ input.form-control, select.form-control, .select2-container .select2-selection--
 
 .select2-container--default .select2-selection--single .select2-selection__rendered{
     line-height: 48px;
+}
+.select2-container--default .select2-dropdown .select2-search__field, 
+.select2-container--default .select2-search--inline .select2-search__field{
+    outline: 0;
+    border-width: 0 !important;
+}
+.select2-container--default .select2-dropdown .select2-search__field:focus, 
+.select2-container--default .select2-search--inline .select2-search__field:focus {
+    outline: 0;
+    border-width: 0 !important;
 }
 .form-control:focus {
     box-shadow: none;
