--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.fixed-top .nav-link{
-    margin-right: 2em;
-    font-size: 1.2em;
-}
 .navbar-dark.fixed-top .nav-link{
     color: #ffffee;
 }
@@ -275,7 +271,7 @@ a.btn{
     background-color: #ffffff75;
 }
 .table {
-    border-collapse:separate; 
+    border-collapse:separate;
     border-spacing: 0em 0.4em !important;
 }
 .table tr td{
@@ -299,4 +295,211 @@ tr td:last-child { border-bottom-right-radius: 10px; }
 }
 .btn-pill{
     border-radius: 100px;
+}
+
+/*new styles*/
+body {
+    font-family: "Poppins";
+}
+
+.navbar-dark .nav-link {
+    color: #fff;
+}
+
+.navbar {
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.navbar-brand {
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.bg {
+    background-image: url('../images/bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.dark {
+    /*background: #22092C d1;*/
+    background: rgba(0, 0, 0, 0.8);
+    background: -webkit-linear-gradient(to bottom right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5));
+    min-height: 100vh;
+}
+
+.bg-primary {
+    background-color: #22092C !important;
+}
+
+.bg-warning {
+    background-color: #FF6C22 !important;
+    border-color: #FF6C22 !important;
+}
+
+.btn-warning {
+    background-color: #FF6C22 !important;
+}
+
+.text-warning {
+    color: #FF6C22 !important;
+}
+
+table.border-end {
+    border-color: #22092C !important;
+    border-width: 5px !important;
+}
+
+.navbar .btn {
+    border-radius: 100px;
+}
+
+.btn-primary {
+    background-color: #22092C !important;
+    border-color: #22092C !important;
+}
+
+.text-primary {
+    color: #22092C !important;
+}
+
+.big,
+.very-big {
+    /*color: #F09819;*/
+    font-weight: bold;
+}
+
+.big {
+    font-size: 2.5em;
+    font-weight: bolder;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.very-big {
+    font-size: 3em;
+}
+
+.bg p {
+    margin-top: 2em;
+    color: white;
+    font-weight: bold;
+    font-size: 1.4em;
+}
+
+.dark .btn-primary {
+    /*background-color: #F09819 !important;
+    border-color: #F09819 !important;*/
+    border-radius: 100px;
+    padding: 0.6em 2em;
+}
+
+.book-flight {
+    margin-top: -10vh;
+}
+
+.login {
+    background-image: url('../images/flight.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.background {
+    background: rgba(255, 255, 255, 0.9);
+    background: -webkit-linear-gradient(to bottom right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.6));
+    background: linear-gradient(to bottom right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.6));
+    /*min-height: 90vh;*/
+}
+
+.login h3 {
+    font-weight: bold;
+}
+
+/*
+.form-control{
+    border-color: #182848 !important;
+    border-width: 2px;
+    font-size: 1em;
+    background-color: transparent;
+}*/
+.form-control:focus {
+    box-shadow: none;
+}
+
+.select2-container--default .select2-selection--single,
+input.form-control {
+    height: 40px;
+    /*border-width: 2px;*/
+}
+
+.carousel-inner {
+    border-radius: 5px;
+}
+/*
+.card-img-top {
+    height: 40vh;
+    object-fit: cover;
+}*/
+
+.navbar-nav .nav-link.active,
+.navbar-nav .nav-link.show {
+    color: #FF6C22;
+    font-weight: bold;
+}
+
+.bg-white {
+    background-color: #fff !important;
+}
+
+.bold {
+    font-weight: bold;
+}
+.header-text{
+    font-weight: bold;
+    font-size: 3em;
+}
+.header-paragraph{
+    font-size: 1.3em;
+}
+.btn-round{
+    border-radius: 100px;
+}
+.footer{
+    background-color: #2b2c30;
+    color: #fff;
+}
+.footer h5{
+    font-weight: bold;
+}
+.footer .copyright{
+    background-color: #191a1c;
+}
+.myCircle {
+    height: 20px;
+    width: 20px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 100%;
+}
+.navbar{
+    transition: background-color 0.5s ease-in-out;
+}
+.no-bold{
+    font-weight: 300;
+}
+.counter {
+    margin: 20px;
+    opacity: 1; /* Initially hidden */
+    transform: translateY(20px); /* Initially translate down to give an enter animation effect */
+    transition: opacity 1s, transform 1s;
+    font-size: 3em;
+}
+.myCircleDiv {
+    height: 50px;
+    width: 50px;
+    background-color: #000428;
+    border: 1px solid #fff;
+    border-radius: 100%;
 }
